--- a/app/src/main/res/layout/fragment_dziennik.xml
+++ b/app/src/main/res/layout/fragment_dziennik.xml
@@ -82,25 +82,28 @@
         </LinearLayout>
 
         <!--Podsumowanie-->
+
+
+        <!--Odżywianie-->
         <LinearLayout
             android:id="@+id/ll_calories_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/rounded_bg"
             android:layout_margin="20dp"
-            android:padding="20dp"
-            android:elevation="8dp">
+            android:background="@drawable/rounded_bg"
+            android:elevation="8dp"
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:layout_marginBottom="15dp"
+                android:text="Podsumowanie"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:text="Podsumowanie"
-                android:textStyle="bold"
-                android:layout_marginBottom="15dp"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -111,28 +114,28 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_marginTop="10dp"
                         android:id="@+id/tv_calories_eaten"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:text="508"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
-                        android:textStyle="bold"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
-                        android:textColor="@color/black"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAlignment="center"
                         android:text="Zjedzone"
-                        android:textSize="16sp"/>
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <!--Pozostało-->
@@ -148,8 +151,7 @@
                         android:layout_height="140dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        />
+                        android:layout_marginRight="5dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -158,21 +160,21 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:textColor="@color/black"
                             android:id="@+id/tv_calories_left"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAlignment="center"
                             android:text="1492"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="28sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                         <TextView
-                            android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Pozostało"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textColor="@color/black" />
 
                     </LinearLayout>
 
@@ -182,28 +184,28 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_marginTop="10dp"
                         android:id="@+id/tv_calories_goal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:text="2000"
-                        android:textSize="18sp"
                         android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAlignment="center"
                         android:text="Cel"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"/>
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -212,13 +214,10 @@
                 android:id="@+id/rv_macros"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                />
+                android:nestedScrollingEnabled="false" />
 
         </LinearLayout>
 
-
-        <!--Odżywianie-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
