Dodanie recyclerView w podsumowaniu z makrami i mikroskladnikami

--- a/app/src/main/res/layout/dziennik_podsumowanie_miesiac.xml
+++ b/app/src/main/res/layout/dziennik_podsumowanie_miesiac.xml
@@ -2,16 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/ll_dziennik_podsumowanie_miesiac">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="Miesiąc"
-        android:textSize="30sp"/>
+
 
 </LinearLayout>
